Fix: fix layout issues on mobile devices

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -21,7 +21,7 @@ html, body {
   .favorites-btn,
   .remove-btn {
     font-size: 0.9rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem;
   }
 
   .photo-full-info {
@@ -46,6 +46,6 @@ html, body {
   .button-group,
   .navF-buttons {
     flex-direction: column;
-    gap: 0.75rem;
+    gap: 0.5rem;
   }
 }
