--- a/frontend/src/styles/Favorites.css
+++ b/frontend/src/styles/Favorites.css
@@ -37,7 +37,7 @@ h2 {
     padding: 0.5rem 1rem;
     margin: 1rem;
     cursor: pointer;
-    font-size: 0.8rem;
+    font-size: 1rem;
 }
 
 .remove-btn:hover {
