--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -138,6 +138,7 @@ input[type="date"] {
 
 @media (max-width: 768px) {
     .home-container {
+        justify-content: flex-start;
         padding: 4rem;
     }
 
@@ -158,7 +159,8 @@ input[type="date"] {
 @media (max-width: 480px) {
     .home-container {
         padding-bottom: 2rem;
-      }
+        justify-content: flex-start;
+    }
         
     form {
         gap: 0.75rem;
